ch3/kubernetes/sample-app-deployment.yml
apiVersion: apps/v1
kind: Deployment                  
metadata:                         
  name: sample-app-deployment
spec:

  replicas: 3                     
  template:                       
    metadata:                     
      labels:
        app: sample-app-pods
    spec:
      containers:                 
        - name: sample-app        
          image: 337179847826.dkr.ecr.us-east-2.amazonaws.com/sample-app:v3   
          ports:
            - containerPort: 8080 
  selector:                       
    matchLabels:
      app: sample-app-pods
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
