ch3/kubernetes/extra-service.yml
apiVersion: v1
kind: Service                    
metadata:                        
  name: sample-app-service-extra
spec:
  type: NodePort             
  selector:
    app: sample-app-pods         
  ports:
    - protocol: TCP
      port: 80                   
      targetPort: 8080
