ch3/kubernetes/sample-app-service.yml
apiVersion: v1
kind: Service                    
metadata:                        
  name: sample-app-loadbalancer
spec:
  type: LoadBalancer             
  selector:
    app: sample-app-pods         
  ports:
    - protocol: TCP
      port: 80                   
      targetPort: 8080
